<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3E2F78"
        android:padding="16dp"
        android:text="@string/quick_cash_user_dashboard"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- Navigation buttons -->

    <!-- Job Postings -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D4CAEC"
        android:orientation="horizontal"
        android:padding="8dp">

        <!-- Find jobs button -->
        <Button
            android:id="@+id/findJobsButton"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/find_jobs" />

        <!-- All jobs button -->
        <Button
            android:id="@+id/allJobButton"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_jobs" />

        <!-- Stats button -->
        <Button
            android:id="@+id/StatsButton"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_stats" />

        <!-- Your Profile button -->
        <Button
            android:id="@+id/yourProfileButton"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/your_profile_user" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <GridLayout
            android:id="@+id/jobPostingsGridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:rowCount="3"
            android:orientation="horizontal">

<!--            &lt;!&ndash; Box 1 &ndash;&gt;-->
<!--            <TextView-->
<!--                android:id="@+id/jobPosting1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Job Posting 1"-->
<!--                android:padding="16dp"-->
<!--                android:layout_margin="8dp"-->
<!--                android:textSize="18sp"-->
<!--                />-->


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/JobListing_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </GridLayout>
    </ScrollView>


</LinearLayout>